objects/copado__Data_Change_Event_Condition__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>copado__Allow_All_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow All Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Condition_Key__c</fullName>
        <label>Condition Key</label>
        <length>242</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>copado__Condition_Logic__c</fullName>
        <label>Condition Logic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Delete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Insert__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Insert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Object_Api_Name__c</fullName>
        <label>Object Api Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Record_Type_Developer_Name__c</fullName>
        <label>Record Type Developer Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Subscriber_Code__c</fullName>
        <label>Subscriber Code</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Undelete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Undelete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update</label>
        <type>Checkbox</type>
    </fields>
    <label>Copado Data Change Event Conditions</label>
</CustomObject>